test-expected/large/analyticspipelines/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: aaservices
    foo.com/duversion: 1.1.55-20190924.1569367446918
    foo.com/version: 1.1.55
  labels:
    app.kubernetes.io/name: aaservices
    helm.sh/chart: aaservices-1.1.55
  name: analyticspipelines
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /analyticsPipelines
    - uri:
        prefix: /analyticsPipelines/
    route:
    - destination:
        host: analyticspipelines.peekay.svc.cluster.local
